Refactored company details and investment tab to move data parsing and labels into their own files and have the controller concentrate on being a controller. Change order of fields in company detail slightly and add and remove a few fields Fix a spacing issue in companies house table. Show message when no related companies

--- a/src/sass/_shame.scss
+++ b/src/sass/_shame.scss
@@ -93,6 +93,7 @@ hr {
   p.footnote {
     color: $grey-1;
     padding-left: 35px;
+    padding-bottom : 10px;
     margin: 0;
   }
 }
